Install express and config create Server const express = require('express');   // express exports a express() function to create an instance const app = express();   // creating an express app & storing in variable. Now, the app is a valid request handler. const server = http.createServer(app);    // app - requesthandler

--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "homepage": "https://github.com/tejesh-kumar/nodejs-max-course#readme",
   "devDependencies": {
     "nodemon": "^2.0.3"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
